# OSP2

./: .gitignore  CMakeLists.txt  Makefile  README.md  astyle.conf  cg_local.h  chahgelog.txt  cpp_check.sh  cppcheck_suppress.txt  format.sh
.github/workflows/: makefile.yml
assets/: OSP2.cfg
assets/gfx/2d/: Elite.cfg  EliteBigchars.cfg  crosshair_10.tga  crosshair_11.tga  crosshair_12.tga  crosshair_13.tga  crosshair_14.tga  crosshair_15.tga  crosshair_16.tga  crosshair_17.tga  crosshair_18.tga  crosshair_19.tga  crosshair_20.tga  crosshair_21.tga  crosshair_22.tga  crosshair_23.tga  crosshair_24.tga  crosshair_25.tga  crosshair_26.tga  crosshair_27.tga  crosshair_28.tga  crosshair_29.tga  crosshair_30.tga  crosshair_31.tga  crosshair_32.tga  crosshair_33.tga  crosshair_34.tga  crosshair_35.tga  crosshair_36.tga  crosshair_37.tga  crosshair_38.tga  crosshair_39.tga  crosshair_40.tga  crosshair_41.tga  crosshair_42.tga  crosshair_43.tga  crosshair_44.tga  crosshair_45.tga  crosshair_46.tga  crosshair_47.tga  (+63 more)
assets/gfx/damage/: freeze_stain.tga
assets/gfx/emoji/: emoji.cfg
assets/hud/: default.cfg
assets/icons/: iconr_white.tga
assets/icons/obituaries/: ObituariesSkull.tga  drowned.tga  fallencrashed.tga  falling.tga  lava.tga  melted.tga  targetHit.tga  telefrag.tga
assets/models/players/anarki/: head_fb.skin  icon_blue.tga  icon_fb.tga  lower_fb.skin  upper_fb.skin
assets/models/players/biker/: head_fb.skin  icon_fb.tga  icon_red.tga  upper_fb.skin
assets/models/players/bitterman/: icon_blue.tga  icon_fb.tga  upper_fb.skin
assets/models/players/bones/: icon_blue.tga  icon_fb.tga  icon_red.tga  lower_fb.skin  upper_fb.skin
assets/models/players/crash/: head_fb.skin  icon_blue.tga  icon_fb.tga  icon_red.tga  upper_fb.skin
assets/models/players/doom/: icon_blue.tga  icon_fb.tga  upper_fb.skin
assets/models/players/grunt/: head_fb.skin  icon_blue.tga  icon_fb.tga  icon_red.tga  upper_fb.skin
assets/scripts/: cmpa.shader  crosshairs.shader  emoji.shader  freeze.shader  osp2.shader
assets/sprites/: foe2.tga
cmake/: basegame.cmake  basegame_sources.cmake  installer.cmake  mod.cmake  tests.cmake
cmake/compilers/: all.cmake  gnu.cmake  msvc.cmake
cmake/libraries/: all.cmake
cmake/tests/: CMakeLists.txt
cmake/utils/: pk3.cmake  qvm_tools.cmake
code/cgame/: cg_chatfilter.c  cg_consolecmds.c  cg_crosshair.c  cg_customloc.c  cg_cvardescriptions.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_emoji.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_localevents.c  cg_main.c  cg_marks.c  cg_ospconfig.c  cg_osphud.c  cg_osputil.c  cg_players.c  cg_playerscolors.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_shudconfig.c  cg_shudmain.c  cg_snapshot.c  cg_superhud.c  cg_superhud.h  cg_superhud_configparser.c  cg_superhud_element_ammomessage.c  cg_superhud_element_attacker_icon.c  cg_superhud_element_attacker_name.c  cg_superhud_element_chat.c  cg_superhud_element_flagstatus.c  cg_superhud_element_followmessage.c  cg_superhud_element_fps.c  (+46 more)
code/game/: bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_pmove.c  bg_public.h  bg_slidemove.c  q_math.c  q_shared.h  surfaceflags.h
code/qcommon/: common.c  jsmn.c  jsmn.h  l_crc.c  l_crc.h  q_math.c  q_shared.c  q_shared.h  qcommon.h  qfiles.h
code/tests/: memory.cxx  memory.hxx  test_Q_sscanf.cxx  test_cg_customloc.cxx  test_cg_osputil_colorparser.cxx  test_cg_playerscolors.cxx  test_cg_superhud_configparser.cxx  test_main.cxx  test_osp_drawstring.cxx  test_qcommon_zone_allocator.cxx  test_teamoverlay.cxx
code/tools/asm/: opstrings.h
code/ui/: keycodes.h  menudef.h  ui_shared.h
docs/: colors.md  commands.md  crosshair.md  emoji.md  fonts.md  osp2-q3-ClientReadme.md  superhud.md  tests.md  textcompiler.md  versions.md
tools/: astyle.conf  cpp_check.sh  format.sh  generate_emoji_shaders.py
util/: q3font.py  q3fontSizes.py  template.tga
(+65 files in other folders)
